# gattc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli.md  codegen.md  config.md  development.md  docgen.md  getting-started.md  schema.md
example/: README.md  gattc.yaml
example/docs/ble/: gatt_services.md
example/gattc/: device_telemetry.yaml  heart_rate_service.yaml
example/gattc/changelog/device_telemetry/: 001.md  002.md  003.md
example/gattc/changelog/heart_rate_service/: 002.md
example/gattc/snapshots/: device_telemetry.json  heart_rate_service.json
scripts/: bump_version.py
src/gattc/: __init__.py  __main__.py  _errors.py  _util.py  changelog.py  cli.py  config.py  diff.py  schema.py  snapshot.py
src/gattc/commands/: __init__.py  _compile_modes.py  _output_management.py  _schema_loading.py  changelog.py  check.py  compile.py  docs.py  init_cmd.py  release.py
src/gattc/generators/: __init__.py  docs.py  zephyr.py
src/gattc/templates/docs/: service.html.j2  service.md.j2
src/gattc/templates/zephyr/: combined_header.h.j2  combined_source.c.j2  header.h.j2  source.c.j2
tests/: __init__.py  test_changelog_command.py  test_cli.py  test_commands_helpers.py  test_compile.py  test_config.py  test_diff.py  test_docs.py  test_generator.py  test_release.py  test_roundtrip.py  test_schema.py  test_snapshot.py
tests/stubs/zephyr/bluetooth/: gatt.h  uuid.h
tests/stubs/zephyr/sys/: byteorder.h
